# percona-server

./: .gitmodules  CMakeLists.txt  LICENSE  MYSQL_VERSION  VERSION  azure-pipelines.yml  config.h.cmake  configure.cmake
.circleci/: config.yml
build-ps/: percona-server-8.0_builder.sh  percona-server.spec
build-ps/debian/: percona-mysql-router.install  percona-server-server.install
build-ps/rpm/: mysql-5.7-sharedlib-rename.patch
client/: CMakeLists.txt  client_priv.h  mysql.cc  mysqlbinlog.cc  mysqldump.c  mysqldump.cc  mysqltest.cc
client/dump/: abstract_chain_element.h  abstract_progress_watcher.h
client/mysqltest/: regular_expressions.h  secondary_engine.cc
cmake/: check_stdcxx11.cmake  component.cmake  curl.cmake  libutils.cmake  plugin.cmake
cmake/os/: Linux.cmake
components/encryption_udf/: CMakeLists.txt  encryption_udf_component.cc
components/libminchassis/: registry.cc
components/masking_functions/: CMakeLists.txt
components/uuid_vx_udf/: CMakeLists.txt  uuid_vx_udf_component.cc
components/uuidx_udf/: CMakeLists.txt  ts_helpers.h  uuidx_udf_component.cc
extra/opensslpp/: CMakeLists.txt
include/: my_aes.h  my_alloc.h  my_compiler.h  my_global.h  my_regex.h  my_sys.h  mysql.h.pp
include/ext/: optional.hpp  string_view.hpp
include/mysql/: plugin_auth.h.pp
include/mysqlpp/: udf_context.hpp  udf_context_charset_extension.hpp  udf_error_reporter.hpp  udf_registration.hpp  udf_traits.hpp  udf_wrappers.hpp
libmysql/: CMakeLists.txt
man/: mysqldumpslow.1
mysql-test/: lsan.supp  mysql-test-run.pl  valgrind.supp
mysql-test/collections/: disabled.def
mysql-test/include/: assert_trigger_cache_increment.inc  ctype_common.inc  have_masking_functions_component.inc  mtr_check.sql  (+7 more)
mysys/: CMakeLists.txt  mf_iocache.c  mf_iocache2.c  my_aes_openssl.cc  psi_noop.cc
router/: LICENSE.router
router/src/plus/src/: CMakeLists.txt  plus_component.cc  plus_plugin.cc  plus_plugin.h  plus_plugin_config.cc  plus_plugin_config.h
share/: errmsg-utf8.txt  messages_to_clients.txt  messages_to_error_log.txt
sql/: CMakeLists.txt  binlog.cc  binlog.h  dd_table_share.cc  event_crypt.cc  field.cc  field.h  filesort.cc  handler.cc  handler.h  item.h  item_cmpfunc.h  item_func.cc  lex.h  log.cc  log.h  log_event.cc  log_event.h  mdl.cc  mdl.h  mf_iocache_encr.cc  mysqld.cc  mysqld.h  opt_hints.cc  opt_hints.h  opt_range.cc  options_mysqld.h  parse_tree_nodes.cc  parse_tree_nodes.h  persisted_variable.cc  protocol_classic.cc  psi_memory_key.cc  psi_memory_key.h  query_result.cc  rpl_binlog_sender.cc  rpl_gtid.h  rpl_handler.cc  rpl_master.cc  rpl_replica.cc  rpl_rli.cc  (+59 more)
sql-common/: client.cc  json_binary.cc  net_serv.cc
testclients/: mysql_client_test.cc
utilities/: innochecksum.cc
vio/: viosocket.cc
(+642 files in other folders)
